--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>soot</groupId>
+			<groupId>ca.mcgill.sable</groupId>
 			<artifactId>soot</artifactId>
-			<version>trunk</version>
+			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>de.fraunhofer.iem</groupId>
@@ -67,6 +67,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<type>test-jar</type>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.fraunhofer.iem</groupId>
+			<artifactId>boomerang</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
