--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 		</dependency>
 		<dependency>
 			<groupId>heros</groupId>
-			<artifactId>heros</artifactId>
+			<artifactId>heros-ideal</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
