--- a/pom.xml
+++ b/pom.xml
@@ -47,13 +47,13 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>de.fraunhofer.iem</groupId>
-			<artifactId>IDEViz</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>heros</groupId>
+			<artifactId>heros</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>heros</groupId>
-			<artifactId>heros-ideal</artifactId>
+			<groupId>de.fraunhofer.iem</groupId>
+			<artifactId>IDEViz</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -65,13 +65,6 @@
 			<groupId>de.fraunhofer.iem</groupId>
 			<artifactId>boomerang</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>de.fraunhofer.iem</groupId>
-			<artifactId>boomerang</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<type>test-jar</type>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
